load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "codegen",
    srcs = ["codegen_imports.go"],
    importpath = "github.com/google/xtoproto/codegen",
    visibility = ["//visibility:public"],
)

go_test(
    name = "codegen_test",
    srcs = ["codegen_imports_test.go"],
    embed = [":codegen"],
)
