load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "csvcoder_builtins.go",
        "csvcoder_cell.go",
        "csvcoder_file.go",
        "csvcoder_positions.go",
        "csvcoder_row.go",
    ],
    importpath = "github.com/google/xtoproto/csvcoder",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["csvcoder_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
