load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "csvcoder",
    srcs = [
        "csvcoder_cell.go",
        "csvcoder_file.go",
        "csvcoder_positions.go",
        "csvcoder_row.go",
    ],
    importpath = "github.com/google/xtoproto/csvcoder",
    visibility = ["//visibility:public"],
    deps = ["//textcoder"],
)

go_test(
    name = "csvcoder_test",
    srcs = [
        "csvcoder_examples_test.go",
        "csvcoder_test.go",
    ],
    embed = [":csvcoder"],
    deps = [
        "//textcoder",
        "@com_github_google_go_cmp//cmp",
    ],
)
