load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["csvinfer.go"],
    importpath = "github.com/google/xtoproto/csvinfer",
    visibility = ["//visibility:public"],
    deps = ["//recordinfer:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["csvinfer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//recordinfer:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
