load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "csvinfer",
    srcs = ["csvinfer.go"],
    importpath = "github.com/google/xtoproto/csvinfer",
    visibility = ["//visibility:public"],
    deps = ["//recordinfer"],
)

go_test(
    name = "csvinfer_test",
    srcs = ["csvinfer_test.go"],
    embed = [":csvinfer"],
    deps = [
        "//proto/recordtoproto",
        "//recordinfer",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
