load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "csvtoproto",
    srcs = [
        "csvtoproto.go",
        "csvtoproto_go_codegen.go",
    ],
    importpath = "github.com/google/xtoproto/csvtoproto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/recordtoproto",
        "@com_github_golang_glog//:glog",
        "@com_github_mitchellh_go_wordwrap//:go-wordwrap",
        "@com_github_stoewer_go_strcase//:go-strcase",
    ],
)
