load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
#load("defs.bzl", "")

go_library(
    name = "playground_lib",
    srcs = ["playground.go"],
    importpath = "github.com/google/xtoproto/playground",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:js_wasm": [
            "//proto/service",
            "//service",
            "@org_golang_google_protobuf//encoding/prototext",
            "@org_golang_google_protobuf//proto",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "playground",
    out = "playground.wasm",
    embed = [":playground_lib"],
    goarch = "wasm",
    goos = "js",
    pure = "on",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "playground_files",
    srcs = [
        "index.html",
        "prism-theme-dark.css",
        "prism-theme-light.css",
        ":playground",
        "//third_party:wasm_exec.js",
    ],
    visibility = ["//visibility:public"],
)
