load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protocp",
    srcs = [
        "protocp.go",
        "protocp_writers.go",
    ],
    importpath = "github.com/google/xtoproto/protocp",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//proto"],
)
