load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "recordinfer",
    srcs = [
        "recordinfer.go",
        "recordinfer_numbers.go",
        "recordinfer_strings.go",
        "recordinfer_timestamps.go",
    ],
    importpath = "github.com/google/xtoproto/recordinfer",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/recordtoproto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stoewer_go_strcase//:go-strcase",
    ],
)

go_test(
    name = "recordinfer_test",
    srcs = ["recordinfer_test.go"],
    embed = [":recordinfer"],
    deps = [
        "//proto/recordtoproto",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
