load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "service.go",
        "service_generate_code.go",
        "service_infer.go",
    ],
    importpath = "github.com/google/xtoproto/service",
    visibility = ["//visibility:public"],
    deps = [
        "//csvinfer:go_default_library",
        "//csvtoproto:go_default_library",
        "//proto/service:go_default_library",
        "//recordinfer:go_default_library",
        "@com_github_stoewer_go_strcase//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//proto/recordtoproto:go_default_library",
        "//proto/service:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
