load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "service.go",
        "service_generate_code.go",
        "service_infer.go",
    ],
    importpath = "github.com/google/xtoproto/service",
    visibility = ["//visibility:public"],
    deps = [
        "//csvinfer",
        "//csvtoproto",
        "//proto/service",
        "//recordinfer",
        "@com_github_stoewer_go_strcase//:go-strcase",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = [
        "//proto/recordtoproto",
        "//proto/service",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
