load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sexpr",
    srcs = [
        "sexpr.go",
        "sexpr_factory.go",
        "sexpr_sourcefile.go",
        "sexpr_util.go",
    ],
    importpath = "github.com/google/xtoproto/sexpr",
    visibility = ["//visibility:public"],
    deps = [
        "//sexpr/form",
        "//textpos",
    ],
)

go_test(
    name = "sexpr_test",
    srcs = [
        "sexpr_examples_test.go",
        "sexpr_test.go",
    ],
    embed = [":sexpr"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
