load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "textcoder.go",
        "textcoder_builtins.go",
    ],
    importpath = "github.com/google/xtoproto/textcoder",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "textcoder_example_context_test.go",
        "textcoder_example_explicit_test.go",
        "textcoder_example_interface_test.go",
        "textcoder_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
