load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wirepath",
    srcs = [
        "wirepath.go",
        "wirepath_from_string.go",
        "wirepath_protostrings.go",
        "wirepath_value.go",
    ],
    importpath = "github.com/google/xtoproto/wirepath",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/wirepath",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "wirepath_test",
    size = "small",
    srcs = ["wirepath_test.go"],
    embed = [":wirepath"],
    deps = [
        "//internal/protoreflectcmp",
        "//proto/wirepath",
        "//proto/wirepath/testproto",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
