load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "xtoproto_lib",
    srcs = ["xtoproto.go"],
    importpath = "github.com/google/xtoproto/cmd/xtoproto",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/service",
        "//service",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_binary(
    name = "xtoproto",
    embed = [":xtoproto_lib"],
    visibility = ["//visibility:public"],
)
