load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["xtoproto_web.go"],
    importpath = "github.com/google/xtoproto/cmd/xtoproto_web",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:js_wasm": [
            "//proto/service:go_default_library",
            "//service:go_default_library",
            "@org_golang_google_protobuf//encoding/prototext:go_default_library",
            "@org_golang_google_protobuf//proto:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "xtoproto_web",
    embed = [":go_default_library"],
    goarch = "wasm",
    goos = "js",
    pure = "on",
    visibility = ["//visibility:public"],
)
