load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "xtoproto_web_lib",
    srcs = ["xtoproto_web.go"],
    data = [
        "//playground:playground_files",
    ],
    importpath = "github.com/google/xtoproto/cmd/xtoproto_web",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_binary(
    name = "xtoproto_web",
    embed = [":xtoproto_web_lib"],
    visibility = ["//visibility:public"],
)
