load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@xtoproto//bazel:defs.bzl", "go_xtoproto_converter_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel:write_go_generated_srcs.bzl", "write_go_proto_srcs")

go_library(
    name = "example01",
    embed = [":mypackage_go_proto"],
    importpath = "github.com/google/xtoproto/examples/example01",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "mypackage_proto",
    srcs = ["example01.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "mypackage_go_proto",
    importpath = "github.com/google/xtoproto/examples/example01",
    proto = ":mypackage_proto",
    visibility = ["//visibility:public"],
)

write_go_proto_srcs(
    name = "write_generated_protos",
    src = "example01.pb.go",
    go_proto_library = ":mypackage_go_proto",
)
