load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "mycompany_mypackage_proto",
    srcs = ["example02.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "mycompany_mypackage_go_proto",
    importpath = "github.com/google/xtoproto/examples/example02",
    proto = ":mycompany_mypackage_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":mycompany_mypackage_go_proto"],
    importpath = "github.com/google/xtoproto/examples/example02",
    visibility = ["//visibility:public"],
)
