load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "protoreflectcmp.go",
        "protoreflectcmp_list_impl.go",
    ],
    importpath = "github.com/google/xtoproto/internal/protoreflectcmp",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["protoreflectcmp_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//proto/wirepath/testproto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
