load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protoreflectcmp",
    srcs = [
        "protoreflectcmp.go",
        "protoreflectcmp_list_impl.go",
    ],
    importpath = "github.com/google/xtoproto/internal/protoreflectcmp",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "protoreflectcmp_test",
    srcs = ["protoreflectcmp_test.go"],
    embed = [":protoreflectcmp"],
    deps = [
        "//proto/wirepath/testproto",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
