load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//bazel:write_go_generated_srcs.bzl", "write_go_proto_srcs")

proto_library(
    name = "recordtoproto_proto",
    srcs = ["recordtoproto.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "recordtoproto_go_proto",
    importpath = "github.com/google/xtoproto/proto/recordtoproto",
    proto = ":recordtoproto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "recordtoproto",
    embed = [":recordtoproto_go_proto"],
    importpath = "github.com/google/xtoproto/proto/recordtoproto",
    visibility = ["//visibility:public"],
)

write_go_proto_srcs(
    name = "write_generated_protos",
    go_proto_library = ":recordtoproto_go_proto",
    src = "recordtoproto.pb.go",
)
