load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/recordtoproto:recordtoproto_proto",
    ],
)

go_proto_library(
    name = "service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/xtoproto/proto/service",
    proto = ":service_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/recordtoproto:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":service_go_proto"],
    importpath = "github.com/google/xtoproto/proto/service",
    visibility = ["//visibility:public"],
)
