load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//bazel:write_go_generated_srcs.bzl", "write_go_proto_srcs")

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/recordtoproto:recordtoproto_proto",
    ],
)

go_library(
    name = "service",
    embed = [":service_go_proto"],
    importpath = "github.com/google/xtoproto/proto/service",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/xtoproto/proto/service",
    proto = ":service_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/recordtoproto"],
)

write_go_proto_srcs(
    name = "write_generated_protos",
    src = "service.pb.go",
    go_proto_library = ":service_go_proto",
)
