load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//bazel:write_go_generated_srcs.bzl", "write_go_proto_srcs")

proto_library(
    name = "wirepath_proto",
    srcs = ["wirepath.proto"],
    import_prefix = "github.com/google/xtoproto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "wirepath_go_proto",
    importpath = "github.com/google/xtoproto/proto/wirepath",
    proto = ":wirepath_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "wirepath",
    embed = [":wirepath_go_proto"],
    importpath = "github.com/google/xtoproto/proto/wirepath",
    visibility = ["//visibility:public"],
)

write_go_proto_srcs(
    name = "write_generated_protos",
    src = "wirepath.pb.go",
    go_proto_library = ":wirepath_go_proto",
)
