load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "iri",
    srcs = [
        "iri.go",
        "iri_resolve.go",
    ],
    importpath = "github.com/google/xtoproto/rdf/iri",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_test(
    name = "iri_test",
    size = "small",
    srcs = ["iri_test.go"],
    embed = [":iri"],
)
