load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ntriples.go"],
    importpath = "github.com/google/xtoproto/rdf/ntriples",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["ntriples_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
