load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ntriples",
    srcs = ["ntriples.go"],
    importpath = "github.com/google/xtoproto/rdf/ntriples",
    visibility = ["//visibility:public"],
    deps = ["//rdf/iri"],
)

go_test(
    name = "ntriples_test",
    srcs = ["ntriples_test.go"],
    embed = [":ntriples"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
