load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["rdfxml.go"],
    importpath = "github.com/google/xtoproto/rdf/rdfxml",
    visibility = ["//visibility:public"],
    deps = ["//rdf/ntriples:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["rdfxml_test.go"],
    embed = [":go_default_library"],
)
