load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "rdfxml.go",
        "rdfxml_xmlname.go",
    ],
    importpath = "github.com/google/xtoproto/rdf/rdfxml",
    visibility = ["//visibility:public"],
    deps = [
        "//rdf/iri:go_default_library",
        "//rdf/ntriples:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["rdfxml_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//rdf/ntriples:go_default_library",
        "//rdf/rdfxml/rdftestcases:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
