load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rdfxml",
    srcs = [
        "rdfxml.go",
        "rdfxml_xmlname.go",
    ],
    importpath = "github.com/google/xtoproto/rdf/rdfxml",
    visibility = ["//visibility:public"],
    deps = [
        "//rdf/iri",
        "//rdf/ntriples",
    ],
)

go_test(
    name = "rdfxml_test",
    srcs = ["rdfxml_test.go"],
    embed = [":rdfxml"],
    deps = [
        "//rdf/ntriples",
        "//rdf/rdfxml/rdftestcases",
        "@com_github_google_go_cmp//cmp",
    ],
)
