load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generate_pb_go_files_lib",
    srcs = ["generate_pb_go_files.go"],
    importpath = "github.com/google/xtoproto/releasing/generate_pb_go_files",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "generate_pb_go_files",
    data = [
        ":generated_sources",
    ],
    embed = [":generate_pb_go_files_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "generated_sources",
    srcs = [
        "//proto/recordtoproto:recordtoproto_go_proto",
        "//proto/service:service_go_proto",
        "//proto/wirepath:wirepath_go_proto",
        "//proto/wirepath/testproto:testproto_go_proto",
    ],
    # Based on https://github.com/bazelbuild/rules_go/blob/740ada94dfda52f2a079f718858e8b2b8ee0fdc6/proto/def.bzl#L130
    output_group = "go_generated_srcs",
)
