load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["make_release.go"],
    data = [
        "//cmd/xtoproto_web",
    ],
    importpath = "github.com/google/xtoproto/releasing/make_release",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_binary(
    name = "make_release",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
