load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "make_release_lib",
    srcs = ["make_release.go"],
    data = [
        "//cmd/xtoproto_web",
    ],
    importpath = "github.com/google/xtoproto/releasing/make_release",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bmatcuk_doublestar//:doublestar",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "make_release",
    embed = [":make_release_lib"],
    visibility = ["//visibility:public"],
)
