load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cmpexample.go",
        "cmpexample2.go",
    ],
    importpath = "github.com/google/xtoproto/wirepath/cmpexamples",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)

go_binary(
    name = "cmpexamples",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
