load("@xtoproto//bazel:defs.bzl", "go_xtoproto_converter_library")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

# gazelle:resolve go github.com/google/xtoproto/examples/example01/converter :converter
go_xtoproto_converter_library(
    name = "converter",
    importpath = "github.com/google/xtoproto/examples/example01/converter",
    request = "codegen_request.pbtxt",
    deps = [
        "//examples/example01",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["converter_test.go"],
    deps = [
        "//examples/example01",
        "//examples/example01/converter",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)

go_test(
    name = "converter_test",
    srcs = ["converter_test.go"],
    deps = [
        "//examples/example01",
        "//examples/example01/converter",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
